[tool.poetry]
name = "fastmqtt"
version = "0.1.5"
description = ""
authors = ["toxazhl <zhltoxa@gmail.com>"]
readme = "README.md"
repository = "https://github.com/toxazhl/fastmqtt"

[tool.poetry.dependencies]
python = "^3.9"
aiomqtt = "^2.1.0"
libcst = "^1.3.1"

[tool.poetry.dev-dependencies]
libcst = "*"
black = "*"
ruff = "*"

[tool.black]
line-length = 99
exclude = "\\.?venv|\\.?tests|\\.cache"


[tool.ruff]
target-version = "py38"
line-length = 99
select = [
    "C",
    "DTZ",
    "E",
    "F",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "Q",
    "S",
    "T",
    "W",
    "YTT",
    "RET",
    "SIM",
    "ASYNC",
]
exclude = [
    ".git",
    ".venv",
    ".idea",
    ".tests",
    ".cache",
    "build",
    "dist",
    "scripts",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
