[tool.poetry]
name = "fastmqtt"
version = "0.2.0"
description = ""
authors = ["toxazhl <zhltoxa@gmail.com>"]
readme = "README.md"
repository = "https://github.com/toxazhl/fastmqtt"

[tool.poetry.dependencies]
python = "^3.10"
aiomqtt = "^2.3.0"

[tool.poetry.dev-dependencies]
ruff = "*"

[tool.ruff]
line-length = 99
target-version = "py310"


[tool.ruff.lint]
select = [
    "C",
    "DTZ",
    "E",
    "F",
    "I",
    "ICN",
    "N",
    "PLC",
    "PLE",
    "Q",
    "S",
    "T",
    "W",
    "YTT",
    "RET",
    "SIM",
    "ASYNC",
]
exclude = [
    ".git",
    ".venv",
    ".idea",
    ".tests",
    ".cache",
    "build",
    "dist",
    "logs",
    "media",
    "nginx",
    "scripts",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
