[tool.poetry]
name = "fastmqtt"
version = "0.2.0"
description = ""
authors = ["toxazhl <zhltoxa@gmail.com>"]
readme = "README.md"
repository = "https://github.com/toxazhl/fastmqtt"

[tool.poetry.dependencies]
python = "^3.10"
aiomqtt = "^2.3.0"
tenacity = "^9.0.0"
msgpack = "^1.0.8"
ormsgpack = "^1.5.0"
orjson = "^3.10.7"
cbor2 = "^5.6.4"

[tool.poetry.dev-dependencies]
ruff = "*"

[tool.ruff]
line-length = 99
target-version = "py310"


[tool.ruff.lint]
select = [
    "C",
    "DTZ",
    "E",
    "F",
    "I",
    "ICN",
    "N",
    "PLC",
    "PLE",
    "Q",
    "S",
    "T",
    "W",
    "YTT",
    "RET",
    "SIM",
    "ASYNC",
]
exclude = [
    ".git",
    ".venv",
    ".idea",
    ".tests",
    ".cache",
    "build",
    "dist",
    "logs",
    "media",
    "nginx",
    "scripts",
]

[tool.ruff.lint.per-file-ignores]
"example/**/*.py" = [
    "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant...
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "T201",   # print statement used
    "F841",   # local variable is assigned to but never used
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
